--- a/train_configs/igkt_ts_assist_64.yaml
+++ b/train_configs/igkt_ts_assist_64.yaml
@@ -1,7 +1,7 @@
 ---
-key: igmc_128
+key: igkt_ts_assist_64
 model:
-  type: IGMC
+  type: IGKT_TS
   hop: 1
   num_relations: 6
   latent_dims:
@@ -9,18 +9,18 @@ model:
     - 32
     - 32
     - 32
-  edge_dropout: 0.
+  edge_dropout: 0.1
 
 dataset:
-  max_seq: 128
-#   name: amazon_clothing
+  name: assist
+  max_seq: 64
 
 train:
   device: 0
   epochs: 20
-  batch_size: 128
+  batch_size: 64
   learning_rates:
-    - 1e-4
+    - 1e-3
     - 2e-3
     - 5e-4
   weight_decay: 0.0
